2013-05-28  Richard Biener  <rguenther@suse.de>

PR tree-optimization/56787
	* tree-vect-data-refs.c (vect_analyze_data_refs): Drop clobbers
	from the list of data references.
	* tree-vect-loop.c (vect_determine_vectorization_factor): Skip
	clobbers.
	(vect_analyze_loop_operations): Likewise.
	(vect_transform_loop): Remove clobbers.

	* gcc.dg/vect/pr56787.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@199380 138bc75d-0d04-0410-961f-82ee72b054a4